[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme/fonts/Main_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/RegisterScreen/Register.gd" type="Script" id=2]
[ext_resource path="res://theme/Button_Style.tres" type="StyleBox" id=3]
[ext_resource path="res://theme/fonts/Main_font_24.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.0509804, 0.0509804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 145, 125 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.341176, 0.376471, 1 )

[node name="title_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -208.0
margin_right = 240.0
margin_bottom = -144.0
custom_fonts/font = ExtResource( 1 )
text = "Register New User"
align = 1

[node name="username_edit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -108.0
margin_right = 240.0
margin_bottom = -48.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
align = 1
placeholder_text = "Usernmae"
placeholder_alpha = 0.3

[node name="password_edit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -38.0
margin_right = 240.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
align = 1
secret = true
placeholder_text = "Password"
placeholder_alpha = 0.3

[node name="confirm_password_edit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 32.0
margin_right = 240.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
align = 1
secret = true
placeholder_text = "Confirm password"
placeholder_alpha = 0.3

[node name="sign_up_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 122.0
margin_right = 240.0
margin_bottom = 178.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Sign up"

[node name="notification" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.760784 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 202.0
margin_right = 240.0
margin_bottom = 252.0
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="back_button" type="Button" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "<<back"
